# noah

./: .env.example  .gitignore  ARCHITECTURE.md  AUTHENTICATION_IMPLEMENTATION.md  AWS_OIDC_SETUP.md  DATABASE_CONNECTION.md  DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  HEALTH_CHECK_FIXES.md  MONITORING_AND_CICD_IMPLEMENTATION.md  PROXY_HEADERS_CONFIGURATION.md  README.md  STRANDS_BEDROCK_CONFIGURATION.md  WEBSOCKET_TO_HTTP_STREAMING_MIGRATION.md  amplify.yml  docker-compose.yml  fix-workflows-oidc.py  package-lock.json  package.json  test_discovery_fix.py  test_streaming_fix.md
backend/: package.json  tsconfig.json  vitest.config.ts
documentation/: AUTHENTICATION_IMPLEMENTATION.md  BACKEND_API_DOCUMENTATION.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  OPENTELEMETRY_CONTEXT_FIX.md  PROXY_HEADERS_CONFIGURATION.md  STRANDS_BEDROCK_CONFIGURATION.md  STREAMING_DUPLICATION_FIXES.md
frontend/: .env.example  env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
infrastructure/: cdk.context.json  cdk.json  package.json  tsconfig.json
python-backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  export_goodreads_data.py  insert_goodreads_books.sql  insert_japanese_bestsellers.sql  populate_goodreads_books.py  populate_japanese_top_books.py  pyproject.toml  setup.py  setup_database.py  test_health.py  test_performance_fix.py  test_real_recommendations.py  test_strands_integration.py  test_strands_streaming.py
python-backend/alembic/: env.py
python-backend/alembic/versions/: 6a1b012c8e7c_remove_purchase_links_from_messages.py  70e2f3202201_initial_migration.py  9f56362aa437_create_initial_database_schema.py  a8abefa4ec5f_remove_purchase_links_table.py
python-backend/src/: __init__.py  config.py  database.py  database_init.py  dependencies.py  main.py  telemetry_config.py  vector_db_init.py
python-backend/src/api/: __init__.py  content_storage.py  routes.py
python-backend/src/api/endpoints/: agents.py  chat_streaming.py  content.py  conversations.py  monitoring.py  preferences.py  reading_progress.py  recommendations.py  users.py  websocket.py
python-backend/src/middleware/: __init__.py  monitoring_middleware.py
python-backend/src/models/: __init__.py  content.py  conversation.py  user_profile.py
python-backend/src/schemas/: __init__.py  content.py  conversation.py  reading_behavior.py  user_profile.py
python-backend/src/services/: __init__.py  agent_core.py  ai_response_service.py  amazon_api.py  auth_service.py  bedrock_model_config.py  content_adapter.py  content_processor.py  content_service.py  content_storage.py  conversation_service.py  database.py  discovery_engine.py  enhanced_conversation_service.py  enhanced_intent_service.py  feedback_service.py  logging_config.py  monitoring_service.py  purchase_link_generator.py  reading_progress_service.py  recommendation_engine.py  strands_agent_service.py  strands_config.py  user_profile_service.py  websocket_manager.py
python-backend/tests/: __init__.py  conftest.py  test_amazon_api.py  test_amazon_integration.py  test_content_basic.py  test_content_processor.py  test_content_storage.py  test_content_storage_basic.py  test_content_storage_isolated.py  test_content_storage_properties.py  test_conversation_service.py  test_discovery_engine.py  test_final_system_validation.py  test_integration_checkpoint.py  test_integration_simple.py  test_main.py  test_models_and_schemas.py  test_purchase_link_generator.py  test_reading_progress_api.py  test_reading_progress_api_enhanced.py  test_reading_progress_enhanced.py  test_reading_progress_service.py  test_recommendation_api.py  test_recommendation_engine.py  test_system_validation_simple.py  test_user_profile_service.py
scripts/: README.md  build-and-push-backend.sh  build-and-push.sh  check-migration-status.sh  connect-to-database.sh  connect-via-ssm.sh  debug-bastion-ssh.sh  deploy-backend-with-migrations.sh  deploy-infrastructure.sh  fix-timeouts.sh  get-db-connection.sh  health-monitoring-dashboard.sh  invalidate-cloudfront.sh  monitor-deployment-logs.sh  run-migrations-ecs-task.sh  run-migrations-manual.sh  run-migrations-separate.sh  run-migrations-via-bastion.sh  setup-amplify.sh  setup-bastion-access.sh  setup-cognito.sh  setup-dev.sh  simple-migration-test.sh  test-bedrock-permissions.sh  test-cloudwatch-permissions.sh  test-db-connection.sh  test-ecs-update.sh  (+5 more)
(+73 files in other folders)
